@@ -68,4 +68,6 @@ public final class PreferenceConstants {
 
     public static final String PROPERTY_FILES = "propertyFiles";
 
+    public static final String LOAD_SETTINGS_ON_DEMAND = "loadSettingsOnDemand";
+
 }
