@@ -6,6 +6,7 @@
 - NEW: Add the IvyDE documentation to the Eclipse help (IVYDE-150)
 - NEW: Export IVY_HOME as a classpath variable (IVYDE-141)
 - NEW: Support variables in ivyconf.xml (IVYDE-13) (thanks to Will Gorman)
+- NEW: Allow to manually reload the settings (IVYDE-26)
 
 - FIX: When migrating from ivyde alpha to ivyde beta eclipse is throwing NPE at startup (IVYDE-136) (thanks to Daniel Becheanu)
 - FIX: The retrieve configuration doesn't support '*' as accepted types (IVYDE-137) (thanks to Daniel Becheanu)
